Stage 2: insert into database
